app/assets/stylesheets/blackjack.css
@font-face {
    font-family: "roboto-thin";
    src: url('Roboto-Regular.ttf') format('truetype');
    font-weight: normal;
}

body, html {
    margin: 0;
    padding: 0;
    color: #dd9933;
    background-color: #114412;
    background-size: 1920px 1080px;
    font-family: 'roboto-thin';
}

ul, li {
    margin: 0;
    padding: 0;
    margin-top: 10px;
}

input[type=text], input[type=password] {
    height: 35px;
    width: 100%;
    margin-top: 10px;
    margin-bottom: 10px;
    border: none;
    -webkit-appearance: none;
    -webkit-border-radius: 0px;
    font-size: 1.1em;
    padding: 3px;
    box-shadow: 0px 2px 5px #111111;
}

input[type=button], input[type=submit] {
    height: 50px;
    width: 48%;
    display: box;
    float: left;
    margin-left: 1%;
    margin-right: 1%;
    text-decoration: none;
    color: #ffdd22;
    border: none;
    -webkit-appearance: none;
    -webkit-border-radius: 0px;
    background-color: #121212;
    box-shadow: 0px 5px 5px #111111;
}

input[type=button]:hover, input[type=submit]:hover {
    color: #ddd;
    background-color: #232323;
}

a, a:visited {
  color: #ffdd22;
  float: right;
  margin-right: 5%;
  text-decoration: none;
}

#loginBox {
    width: 90%;
    margin: 0 auto;
    margin-top: 30%;
    padding: 10px;
}

@media screen and (min-width: 1200px) {
    #loginBox {
        width: 15%;
        margin: 0 auto;
        margin-top: 10%;
        padding: 10px;
    }
}

.navbar {
    height: 60px;
    width: 100%;
    background-color: #121212;
    border-bottom: 1px solid #d93;
}

#yourCash {
    display: block;
    width: 150px;
    margin: 0 auto;
}

#signout {
    display: block;
    float: right:
    margin-right: 5%;
}

#moneyValue {
    font-size: 1.5em;
    color: #ffdd22;
}

#betView {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 20%;
    padding-bottom: 30px; 
}

.btnBet {
    width: 50px;
    height: 50px;
    border: none;
    border-radius: 50%;
    background-color: #ffffff;
    margin: 1%;
}

@media screen and (min-width: 1200px) {
    .btnBet {
        width: 75px;
        height: 75px;
    }
}

.btnBet:hover {
    background-color: #dddddd; 
}

#btnRefresh {
    display: none;
}

#prompt {
    width: 100%;
    margin: 0 auto;
    font-size: 1.5em;
    text-align: center;
}

#cards {
    font-size: 1.3em;
    text-shadow: 2px 2px black;
    height: 690px;
}

#cards p {
    margin-top: 0;
    margin-bottom: 0;
}

.card {
    width: 54px;
    height: 72px;
}

@media screen and (min-width: 1200px) {
    .card {
        width: 108px;
        height: 144px;
        margin-left: 1%;
    }
}

.box {
    height: 150px;
}

@media screen and (min-width: 1200px) {
  .box {
      height: 200px;
      margin: 0 auto;
      margin-bottom: 1%;
  }
}

#input {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 20%;
}

#input input[type=button] {
    height: 50px;
    width: 175px;
    margin-top: 2%;
    margin-left: 1%;
    margin-right: 1%;
    color: #ffdd22;
    border: none;
    background-color: #121212;
    box-shadow: 0px 5px 5px #111111;
}

@media screen and (min-width: 1200px) {
  #input input[type=button] {
      height: 75px;
      height: 75px;
      width: 200px;
  }
}

#input input[type=button]:hover {
    color: #ddd;
    border: none;
    background-color: #232323;
}

#input input[type=button]:disabled {
    color: #555;
    border: none;
    background-color: #aaa;
}

